# revsh

client/: Cargo.toml
client/src/: main.rs
common/: Cargo.toml
common/src/: lib.rs
revsh_client/: Cargo.toml
revsh_client/src/: main.rs
revsh_server/: Cargo.toml
revsh_server/src/: main.rs
server/: Cargo.toml
server/src/: lib.rs
server/src/cli/: main.rs
server/src/deamon/: main.rs
