[package]
name = "revsh_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
revsh_common = { path = "../common" }
anyhow = "1.0.66"
bincode = "1.3.3"
serde = { version = "1.0.147", features = ["derive"] }
tokio = { version = "1.21.2", features = ["full"] }
futures = "0.3.25"
gethostname = "0.4.1"
mac_address = { version = "1.1.4", features = ["serde"] }
