[package]
name = "revsh_common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
bincode = "1.3.3"
mac_address = { version = "1.1.4", features = ["serde"] }
nanorand = "0.7.0"
serde = { version = "1.0.147", features = ["derive"] }
tokio = { version = "1.21.2", features = ["full"] }
