[package]
name = "revsh_server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "deamon"
path = "src/deamon/main.rs"

[[bin]]
name = "cli"
path = "src/cli/main.rs"

[dependencies]
revsh_common = { path = "../common" }
anyhow = "1.0.66"
bincode = "1.3.3"
serde = { version = "1.0.147", features = ["derive"] }
tokio = { version = "1.21.2", features = ["full"] }
chrono = { version = "0.4.23", features = ["serde"] }
clap = { version = "4.0.25", features = ["derive"] }
ctrlc = "3.2.3"
mac_address = { version = "1.1.4", features = ["serde"] }
